# api-encrypt

./: .gitignore  ENCRYPTION_SPECS.md  GEMINI.md  README.md  SECURITY_CONSIDERATIONS.md  settings.gradle
android/: README.md
android/app/src/main/java/com/example/novelapp/: CryptoManager.kt
android/app/src/test/java/com/example/novelapp/: CryptoManagerTest.java
aos/: settings.gradle
aos/app/: build.gradle
aos/app/src/main/java/com/example/novelapp/: CryptoManager.kt
backend/: README.md  build.gradle
backend/src/main/java/com/example/novelapi/: NovelApiApplication.java
backend/src/main/java/com/example/novelapi/config/: AsyncConfig.java
backend/src/main/java/com/example/novelapi/controller/: NovelController.java  StreamingNovelController.java
backend/src/main/java/com/example/novelapi/dto/: KeyExchangeRequest.java  NovelResponse.java
backend/src/main/java/com/example/novelapi/service/: NovelStreamingService.java  ReplayGuardService.java
backend/src/main/java/com/example/novelapi/util/: ChunkUtil.java  CryptoUtil.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/example/novelapi/util/: CryptoUtilTest.java
ios/: README.md
ios/NovelApp/: CryptoManager.swift
java-client/: build.gradle
java-client/src/main/java/com/example/client/: RestApiClient.java  StreamingApiClient.java
java-client/src/main/java/com/example/novelapi/util/: CryptoUtil.java
web/: app.js  index.html  verify.html  verify.js
web-wasm/: Cargo.toml  build.bat  build.sh  index.html  stream.html
web-wasm/src/: lib.rs
