[package]
name = "web-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh", "pem"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand_core = { version = "0.6", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.21"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
